[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/repl/repl_control.gd" type="Script" id=1]

[node name="REPL" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Welcome.
Please type a GDScript Expression below and type Enter.

"
scroll_following = true
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 696.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 1239.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true

[node name="import" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 1141.0
margin_right = 1239.0
margin_bottom = 24.0
focus_mode = 0
text = "Import scene"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "obsoleted by load() substitution hack"
}

[node name="eval" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1243.0
margin_right = 1280.0
margin_bottom = 24.0
focus_mode = 0
text = "Eval"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="import_filedialog" type="FileDialog" parent="."]
margin_right = 538.0
margin_bottom = 302.0
window_title = "Ouvrir un fichier"
mode = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/input" to="." method="_on_input_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/eval" to="." method="_on_eval_pressed"]
[connection signal="file_selected" from="import_filedialog" to="." method="_on_import_filedialog_file_selected"]
